Changelog
=========

1.6.2 (unreleased)
------------------

- Nothing changed yet.


1.6.1 (2023-09-18)
------------------

- Fix again login with invalid ticket using REST API, which could lead to
  authenticate the wrong user. Bug was reintroduced in 1.6.0. [buchi]


1.6.0 (2023-08-15)
------------------

- Lookup users by username (login) instead of userid. [buchi]


1.5.0 (2023-01-23)
------------------

- Add Support for Python 3 and Plone 5.2. [lgraf]


1.4.2 (2021-09-13)
------------------

- Raise a 401 if the user to log in does not exist. [elioschmutz]


1.4.1 (2021-06-14)
------------------

- Fix login with invalid ticket, which could lead to authenticate the wrong
  user. [buchi]


1.4.0 (2021-05-27)
------------------

- Add support for cookie based authentication when using REST API. [buchi]
- Drop support for Python < 2.7.9. [buchi]
- Use Python's built-in HTTPS handler which enables support for TLS 1.2 and
  uses CA certificates provided by the OS. [buchi]


1.3.1 (2021-02-05)
------------------

- Preserve multi-valued QS params when stripping ticket from service URL. [lgraf]


1.3.0 (2020-06-02)
------------------

- Handle login similar to PlonePAS (fire login events, expire clipboard,
  create member area and set login times) in @caslogin endpoint. [tinagerber]


1.2.0 (2018-07-17)
------------------

- Add plone.restapi endpoint for login.
  [buchi]

- Add Plone 5 compatibility. [phgross]


1.1.0 (2016-10-13)
------------------

- Handle login similar to PlonePAS (fire login events,
  expire clipboard, create member area and set login times).
  [phgross]

- Avoid having the `ticket` param end up in the browser address bar by
  stripping it from the service_url, and redirecting to the service_url
  after extracting credentials (i.e., a ticket) from the request.
  [lgraf]


1.0.0 (2015-11-25)
------------------

- Initial release.
  [buchi]