@@ -4,7 +4,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow to configure the CAS server url with the environment variable
+  FTW_CASAUTH_CAS_SERVER_URL. [buchi]
 
 
 1.6.1 (2023-09-18)
